<resources>
    <string name="app_name">Photo App</string>
    <string name="action_settings">Settings</string>
    <string name="filter_a">Sketch</string>
    <string name="filter_b">HDR (Strengthen Color Contraction)</string>
    <string name="filter_c">Old Fashion</string>
    <string name="function_a">Symmetry</string>
    <string name="function_b">Invert Colors</string>
    <string name="function_c">Central Light</string>
    <string name="import_text">Import</string>
    <string name="option_selection_activity">Option Selection</string>
    <string name="after_save_activity">Save Successful!</string>
    <string name="show_result_activity">Satisfied?</string>
    <string name="rotation_seekbar">rotation_seekbar</string>
    <string name="save_successful">Save Successful!!</string>
    <string name="activity_symmetry_adjustment">Choose Symmetry Axis</string>
    <string name="ultra_page">Ultra Page</string>
    <string name="continue_button">Continue</string>
</resources>
